# imbalance

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  Dockerfile  Makefile  README.md  docker-compose.yml  imbalance.toml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
Formula/: imbalance.rb
docs/runbooks/: provider-outage.md  recovery.md  rollback-kb.md
scripts/: check_slots.py
src/imbalance/: __init__.py  server.py
src/imbalance/agents/: __init__.py  detector.py  generator.py
src/imbalance/api/: __init__.py  app.py
src/imbalance/api/routes/: queue_ui.py  sessions.py  ui.py  ui_api.py  wiki.py
src/imbalance/api/templates/: base.html  index.html
src/imbalance/api/templates/components/: history_list.html  queue_rows.html  search_results.html  sections_recent.html  sections_rows.html  sessions_recent.html  sessions_rows.html
src/imbalance/api/templates/pages/: dashboard.html  queue.html  search.html  sessions.html  wiki.html  wiki_detail.html
src/imbalance/api/templates/partials/: status.html
src/imbalance/api/templates/queue/: index.html
src/imbalance/api/templates/sessions/: index.html
src/imbalance/api/templates/wiki/: edit.html  index.html  view.html
src/imbalance/cli/: app.py  error_handler.py
src/imbalance/core/: audit.py  backup.py  batch.py  budget.py  circuit_breaker.py  compaction.py  compression.py  conflicts.py  consolidation.py  context.py  dedup.py  embedding_cache.py  embeddings.py  encryption.py  eval.py  git_integration.py  links.py  logging.py  metrics.py  multi_kb.py  notifications.py  notifications_ext.py  project.py  query.py  queue.py  rate_limit.py  retry.py  router.py  router_debug.py  scanner.py  secrets.py  session.py  templates.py  tokens.py  validation.py  write.py
src/imbalance/graph/: __init__.py  _constants.py  indexer.py  models.py  parser.py  trigram.py
src/imbalance/hooks/: __init__.py  claude_code.py
src/imbalance/mcp/: __init__.py  server.py
src/imbalance/storage/: db.py  receipts.py  store.py  vec.py
src/imbalance/storage/migrations/: 0001_init.sql  0002_context_engineering.sql  0003_history_links.sql  0004_reliability.sql  0005_compaction.sql  0006_observability.sql  0007_eval.sql  0008_graph.sql  __init__.py
tests/: conftest.py
tests/e2e/: test_compaction_flow.py  test_full_session.py
tests/fixtures/responses/: compaction_summary.json  flush_delta.json  merge_result.md
tests/fixtures/sample_kb/: imbalance.toml  kb.db
tests/fixtures/session_logs/: corrupted.toml  long_session.toml  short_session.toml
tests/graph/: conftest.py
tests/graph/benchmarks/: bench_indexer.py  bench_parsers.py
tests/graph/fixtures/: fake_codegraph.db
tests/graph/fixtures/python_samples/: async_functions.py  classes.py  decorators.py  simple.py
tests/graph/fixtures/typescript_samples/: generics.ts  interfaces.ts
tests/graph/integration/: test_incremental_sync.py  test_indexer_sqlite.py
tests/graph/memory/: test_no_leaks.py
tests/graph/unit/: test_indexer.py  test_models.py  test_python_parser.py  test_trigram.py
tests/integration/: test_sessions.py  test_storage.py
tests/unit/: test_api_app.py  test_api_routes.py  test_audit.py  test_audit_extended.py  test_backup.py  test_backup_extended.py  test_batch.py  test_batch_extended.py  test_budget.py  test_circuit_breaker.py  test_cli.py  test_cli_daemon.py  test_compaction.py  test_compression.py  test_conflicts.py  test_consolidation.py  test_constants.py  test_context.py  test_db.py  test_dedup.py  test_embedding_cache.py  test_embeddings.py  test_encryption.py  test_error_handler.py  test_eval.py  test_git_integration.py  test_links.py  test_logging.py  test_mcp_server.py  test_metrics.py  test_multi_kb.py  test_notifications.py  test_notifications_ext.py  test_project.py  test_query.py  test_query_edge_cases.py  test_query_extended.py  test_queue.py  test_rate_limit.py  test_rate_limit_extended.py  (+20 more)
