[project]
name = "imbalance"
version = "0.1.0"
description = "SQLite-first local knowledge base and context layer for coding agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "imbalance contributors" },
]
dependencies = [
    "aiosqlite>=0.20,<0.21",
    "cachetools>=5.0,<6",
    "fastapi>=0.115,<0.116",
    "mcp>=1.0,<2",
    "openai>=1.82,<2",
    "platformdirs>=4.0,<5",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.0,<3",
    "tiktoken>=0.8,<0.9",
    "typer>=0.13,<0.14",
    "uvicorn[standard]>=0.32,<0.33",
    "watchfiles>=1.0,<2",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4,<0.5", "sqlite-vec>=0.1,<0.2"]
openai = ["sqlite-vec>=0.1,<0.2"]
compress = ["llmlingua>=0.2,<0.3"]
ui = ["jinja2>=3.1,<4", "mistune>=3.0,<4", "python-multipart>=0.0.9"]
git = ["gitpython>=3.1,<4"]
all = ["imbalance[ollama,compress,ui,git]"]
dev = [
    "httpx>=0.27",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[project.scripts]
imbalance = "imbalance.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imbalance"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests without external services",
    "integration: tests using real SQLite and mocked networks",
    "e2e: full workflow tests",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]
extension = { mdx = "markdown", qmd = "markdown" }
extend-exclude = ["*.md"]
force-exclude = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "UP",
    "I",
    "SIM",
    "C4",
    "RUF",
]
ignore = [
    "E501",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "Q004",
    "COM812",
    "COM819",
    "D203",
    "D206",
    "D300",
    "W191",
    "E111",
    "E114",
    "E117",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 20
exclude = ["*.pyi"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
