[project]
name = "imbalance"
version = "0.1.0"
description = "SQLite-first local knowledge base and context layer for coding agents."
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "imbalance contributors" },
]
dependencies = [
    "aiosqlite>=0.22,<0.23",
    "anthropic>=0.49,<1",
    "cachetools>=7.1,<8",
    "fastapi>=0.136.3,<0.137",
    "mcp>=1.27.1,<2",
    "openai>=2.38,<3",
    "platformdirs>=4.9.6,<5",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.1,<3",
    "tiktoken>=0.13,<0.14",
    "typer>=0.25,<0.26",
    "uvicorn[standard]>=0.47,<0.48",
    "watchfiles>=1.2.0,<2",
]

[project.optional-dependencies]
ollama = ["ollama>=0.6,<0.7", "sqlite-vec>=0.1.9,<0.2"]
openai = ["sqlite-vec>=0.1.9,<0.2"]
compress = ["llmlingua>=0.2.2,<0.3"]
ui = ["jinja2>=3.1.6,<4", "mistune>=3.2.1,<4", "python-multipart>=0.0.29,<0.1"]
git = ["gitpython>=3.1.50,<4"]
all = ["imbalance[ollama,openai,compress,ui,git]"]

[project.scripts]
imbalance = "imbalance.cli.app:app"

[build-system]
requires = ["hatchling>=1.29,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imbalance"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: fast tests without external services",
    "integration: tests using real SQLite and mocked networks",
    "e2e: full workflow tests",
    "slow: tests longer than 5 seconds",
    "requires_ollama: tests requiring running Ollama",
    "requires_network: tests requiring internet access",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]
extension = { mdx = "markdown", qmd = "markdown" }
extend-exclude = ["*.md"]
force-exclude = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "UP",
    "I",
    "SIM",
    "C4",
    "RUF",
    "C90",
    "N",
    "PL",
]
ignore = [
    "E501",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "Q004",
    "COM812",
    "COM819",
    "D203",
    "D206",
    "D300",
    "W191",
    "E111",
    "E114",
    "E117",
    "N818",
    "PLC0415",
    "PLR2004",
    "PLW0603",
    "PLR0911",
    "PLR0913",
    "PLR0915",
    "PLR0402",
    "PLR1730",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 8
max-returns = 8
max-branches = 16

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 20
exclude = ["*.pyi"]

[tool.coverage.run]
source = ["src/imbalance"]
omit = ["*/tests/*", "*/debug/*"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# Dev dependencies are defined in [dependency-groups].dev per PEP 735
[dependency-groups]
dev = [
    "httpx>=0.28.1,<0.29",
    "mypy>=2.1,<3",
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-benchmark>=4.0,<5",
    "psutil>=5.9,<6",
    "ruff>=0.15.14,<0.16",
]
